<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.metis.weather.viewmodel.MainViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.HomeFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_margin="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/city_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_name"
                        android:text="@={viewModel.cityName}">

                    </EditText>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/search_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->viewModel.searchWeather()}"
                        android:text="@string/search"
                        android:textAllCaps="false" />


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">


                    <LinearLayout
                        android:id="@+id/sectionShow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/city"
                            style="@style/Widget.Header.TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="20dp"
                            android:text="@{viewModel.city}">

                        </TextView>

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:text="@{viewModel.date}"
                            android:textColor="@android:color/black"
                            android:textSize="20sp">

                        </TextView>

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true">

                        </ImageView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp">

                            <TextView
                                style="@style/Widget.Title.TextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="4"
                                android:text="@string/temperature">

                            </TextView>

                            <TextView
                                android:id="@+id/temperature"
                                style="@style/Widget.Content.TextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="6"
                                android:text="@{viewModel.temperature}">

                            </TextView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp">

                            <TextView
                                style="@style/Widget.Title.TextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="4"
                                android:text="@string/humidity">

                            </TextView>

                            <TextView
                                android:id="@+id/humidity"
                                style="@style/Widget.Content.TextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="6"
                                android:text="@{viewModel.humidity}">

                            </TextView>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp">

                            <TextView
                                style="@style/Widget.Title.TextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="4"
                                android:text="@string/weather">

                            </TextView>

                            <TextView
                                android:id="@+id/main"
                                style="@style/Widget.Content.TextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="6"
                                android:text="@{viewModel.main}">

                            </TextView>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp">

                            <TextView
                                style="@style/Widget.Title.TextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="4"
                                android:text="@string/description">

                            </TextView>

                            <TextView
                                android:id="@+id/description"
                                style="@style/Widget.Content.TextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="6"
                                android:text="@{viewModel.description}">

                            </TextView>


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/switch_units"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="@{()->viewModel.setTempUnits()}"
                                android:text="@string/fahrenheit"
                                android:textAllCaps="false" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/forecasts"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/forecast"
                                android:textAllCaps="false" />

                        </LinearLayout>


                    </LinearLayout>


                </RelativeLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:minWidth="50dp"
                android:minHeight="50dp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@{viewModel.status}"
                android:textSize="20sp" />

        </RelativeLayout>

    </FrameLayout>

</layout>